--- a/src/pub_sub/CMakeLists.txt
+++ b/src/pub_sub/CMakeLists.txt
@@ -134,6 +134,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(pub01 src/pub01.cpp)
+add_executable(sub01 src/sub01.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -146,7 +147,10 @@ add_executable(pub01 src/pub01.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(pub01
+target_link_libraries(pub01 
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(sub01 
   ${catkin_LIBRARIES}
 )
 
