--- a/src/vslam/param/costmap_common_params.yaml
+++ b/src/vslam/param/costmap_common_params.yaml
@@ -1,25 +1,26 @@
 #---(in meters)---
-footprint: [[-0.15, -0.13], [-0.15, 0.13], [0.15, 0.13], [0.15, -0.13]]
+footprint: [[-0.15, -0.13], [-0.15, 0.13], [0.15, 0.13], [0.15, -0.13]]  #小车形状参数
 
 transform_tolerance: 0.2
 
+# 障碍物层
 obstacle_layer:
  enabled: true
- obstacle_range: 2.5
- raytrace_range: 3.0
- inflation_radius: 0.1
+ obstacle_range: 2.5 # 小于 2.5 米的障碍物时，就会引入代价地图
+ raytrace_range: 3.0 # 用于清除障碍物，清除代价地图中 3 米以外的障碍物
+ inflation_radius: 0.1 # 膨胀半径，扩展在碰撞区域以外的代价区域，使得小车规划路径避开障碍物
  track_unknown_space: false
  combination_method: 1
  
  observation_sources: laser_scan_sensor
  laser_scan_sensor: {data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
-
+# 膨胀层
 inflation_layer:
   enabled:              true
-  cost_scaling_factor:  10.0  # exponential rate at which the obstacle cost drops off (default: 10)
+  cost_scaling_factor:  10.0  # 代价比例系数，越大则代价值越小
   inflation_radius:     0.1  # max. distance from an obstacle at which costs are incurred for planning paths.
-
+# 静态层
 static_layer:
   enabled:              true
   map_topic:            "/map"
