--- a/src/vslam/param/local_costmap_params.yaml
+++ b/src/vslam/param/local_costmap_params.yaml
@@ -1,13 +1,14 @@
+# 局部代价地图
 local_costmap:
-  global_frame: map
-  robot_base_frame: base_footprint
+  global_frame: map #地图坐标系
+  robot_base_frame: base_footprint #小车坐标系
   update_frequency: 5.0
   publish_frequency: 5.0
-  rolling_window: true
-  width: 3
-  height: 3
-  resolution: 0.05
-  transform_tolerance: 0.5
+  rolling_window: true #是否使用动态窗口，默认为false，在静态的全局地图中，地图不会变化
+  width: 3 # 局部地图宽度 单位是 m
+  height: 3 # 局部地图高度 单位是 m
+  resolution: 0.05 # 局部地图分辨率 单位是 m，一般与静态地图分辨率保持一致
+  transform_tolerance: 0.5  #等待坐标变换发布信息的超时时间
   plugins:
    - {name: static_layer,        type: "costmap_2d::StaticLayer"}
    - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
