--- a/src/better_astar_global_planner /package.xml
+++ b/src/better_astar_global_planner /package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="xiaoju@todo.todo">xiaoju</maintainer>
+  <maintainer email="1067095308@qq.com">Libing Yang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
